syntax = "proto3";

package pb;

option go_package = "github.com/xmh1011/go-raft/transport/grpc/pb";

service RaftService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
  rpc ClientRequest(ClientRequestRequest) returns (ClientRequestResponse);
}

message RequestVoteRequest {
  uint64 term = 1;
  int64 candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
  bool pre_vote = 5;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
  int64 candidate_id = 3;
}

message LogEntry {
  bytes command = 1; // Gob encoded
  uint64 term = 2;
  uint64 index = 3;
}

message AppendEntriesRequest {
  uint64 term = 1;
  int64 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 conflict_index = 3;
  uint64 conflict_term = 4;
}

message InstallSnapshotRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 last_included_index = 3;
  uint64 last_included_term = 4;
  uint64 offset = 5;
  bytes data = 6;
  bool done = 7;
}

message InstallSnapshotResponse {
  uint64 term = 1;
}

message ClientRequestRequest {
  int64 client_id = 1;
  int64 sequence_num = 2;
  bytes command = 3; // Gob encoded
}

message ClientRequestResponse {
  bool success = 1;
  bytes result = 2; // Gob encoded
  bool not_leader = 3;
  int64 leader_hint = 4;
}
